client front start

--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -2,7 +2,10 @@
     border: solid #394177;
     padding: 100px;
 }
-.navbar-brand
-{
+.navbar-brand{
     height: 80px;
+}
+
+body{
+    padding: 20px;
 }
