client/ user form

--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -38,8 +38,7 @@ h1 {
 //COMPONENTS
 #text-input-component {
   padding: 5px 0px 5px 0px;
-  width: 100%;
-
+max-width: 200px;
 }
 
 #text-input-component input {
