--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -24,15 +24,13 @@ body {
   height: 80px;
 }
 
-#header-panel-logo {
-
-}
 
 h1 {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-bottom: 30px;
+  font-weight: 200!important;
 }
 
 //COMPONENTS
