--- a/client-document-management/src/main/frontend/src/app/styles/menu.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/menu.scss
@@ -63,13 +63,13 @@
 }
 
 .nav ul li:last-child a {
-  background: #ffce54;
+  background: #666666;
   padding: 0 25px 0 30px;
   color: #FFFFFF;
 }
 
 .nav ul li:last-child a:hover {
-  background: #ffce54;
+  background: #666666;
 }
 
 .nav ul li a {
