--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -5,14 +5,10 @@ html {
 body {
   height: 100%;
   margin: 0;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   padding: 20px;
   text-decoration: none;
-  color: #394177 !important;
-  background: #74ebd5; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #ACB6E5, #74ebd5); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #ACB6E5, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: black !important;
+  background-color: #EDE1F2!important; /* fallback for old browsers */
 }
 
 #mainPanel {
