--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -48,7 +48,7 @@ div#text-input-component group {
   justify-content: center;
   align-items: center;
   border: solid;
-  margin-top: 20px;
+  margin-top: 10px;
   float: right;
 }
 
@@ -101,6 +101,10 @@ div#text-input-component group {
     border-bottom: solid #394177;
   }
 
+  h1{
+    font-size: 10px;
+    padding-bottom: 0;
+  }
   .btn {
     font-size: 0.4em;
   }
@@ -144,4 +148,11 @@ div#text-input-component group {
     margin-bottom: 5px;
     max-width: 200px;
   }
+  #button-component button {
+    margin-top: 10px;
+  }
+  .btn{
+    padding: 3px 3px;
+  }
+
 }
