--- a/client-document-management/src/main/frontend/src/app/styles/menu.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/menu.scss
@@ -1,7 +1,13 @@
 @media (min-width: 301px) {
   .brand {
-    height: 30px;
+    height: 25px;
     display: flex;
+    float: right;
+    font-size: 20px;
+
+    img {
+     margin-top: -10px;
+    }
   }
 
   .nav ul li:nth-last-child(2) a:after {
