--- a/client-document-management/src/main/frontend/src/app/styles/components.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/components.scss
@@ -1,11 +1,11 @@
 
 label {
-  position: absolute;
-  top: 10px;
+  position: relative;
   color: gray !important;
   font: 400 20px Roboto;
   cursor: text;
   transition: .25s ease;
+  padding: 10px 0;
 }
 
 .login label {
@@ -22,32 +22,30 @@ input {
   color: black;
   background: transparent;
   transition: .3s ease;
+
+  &:valid ~ label {
+    top: 0;
+    font: 700 1em Roboto;
+    color: rgba(255, 255, 255, 0.5);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus ~ label {
+    top: 0;
+    font: 700 1em Roboto;
+    color: #394177;
+  }
+
+  &:focus ~ .bar:before {
+    transform: translateX(0);
+  }
+
+
 }
 
-input:valid ~ label {
-  top: 0;
-  font: 700 1em Roboto;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-input:focus {
-  outline: none;
-}
-
-input:focus ~ label {
-  top: 0;
-  font: 700 1em Roboto;
-  color: #394177;
-}
-
-input:focus ~ .bar:before {
-  transform: translateX(0);
-}
-
-input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0px 1000px #333 inset;
-  -webkit-text-fill-color: white !important;
-}
 
 .bar {
   content: '';
