--- a/client-document-management/src/main/frontend/src/app/styles/smallScreen.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/smallScreen.scss
@@ -1,42 +1,15 @@
 @media (max-width: 300px) {
-  body {
-    font-size: 8px;
-    line-height: 1;
-  }
-  .container {
-    padding: -10px 0;
 
-  }
-  .form-control {
-    font-size: 0.4em;
-    height: auto;
-    padding: 0 0;
-    border: 0;
-    border-radius: 0;
-    border-bottom: solid #394177;
-  }
-
-  h1 {
-    font-size: 10px;
-    padding-bottom: 0;
-  }
   .btn {
     font-size: 0.4em;
+    padding: 3px 3px;
   }
-  .bar {
-    height: 0.5px;
-  }
+
   .text-input-component {
     height: 15px;
   }
   .form-group {
     margin-bottom: 10px;
-  }
-
-  .bar:before {
-    width: 60%;
-    align-self: center;
-    height: 70%;
   }
 
   label {
@@ -45,19 +18,20 @@
     font: 200 0.3em Roboto;
     margin-bottom: 0px;
   }
-  input:valid ~ label {
-    bottom: 10px;
-    font: 200 0.5em Roboto;
-    color: rgba(255, 255, 255, 0.5);
-  }
-  input:focus ~ label {
-    bottom: 10px;
-    font: 200 0.5em Roboto;
-    color: #394177;
-  }
   input {
     padding-top: 20px;
 
+    &:valid ~ label {
+      bottom: 10px;
+      font: 200 0.5em Roboto;
+      color: rgba(255, 255, 255, 0.5);
+    }
+
+    &:focus ~ label {
+      bottom: 10px;
+      font: 200 0.5em Roboto;
+      color: #394177;
+    }
   }
   div#text-input-component group {
     margin-bottom: 5px;
@@ -66,38 +40,7 @@
   #button-component button {
     margin-top: 10px;
   }
-  .btn {
-    padding: 3px 3px;
-  }
-  .modal-header {
-    padding: 5px 0 3px 5px;
-  }
-  .modal-title {
-    font-size: 0.5em;
-  }
-  .modal-body {
-    padding: 0 5px 10px 5px;
-  }
-  .modal-header .close {
-    font-size: 5px;
-    z-index: 1098;
-    padding: 0 5px;
-    margin: 0;
-  }
-  .selectdiv:after {
-    font-size: 0.3em;
-    padding: 0px 0 0 0;
-  }
-  .selectdiv select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    display: block;
-    height: inherit;
-    line-height: 1.5;
-    padding: 1.5px;
-    font-size: 0.4em;
 
-  }
+
 
 }
