--- a/client-document-management/src/main/frontend/src/app/styles/menu.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/menu.scss
@@ -6,11 +6,11 @@
     font-size: 20px;
 
     img {
-     margin-top: -10px;
+      margin-top: -10px;
     }
   }
 
-  .nav ul li:nth-last-child(2) a:after {
+  nav ul li:nth-last-child(2) a:after {
     position: absolute;
     z-index: 1;
     top: 0;
@@ -21,7 +21,7 @@
     display: block;
   }
 
-  .nav ul li a {
+  nav ul li a {
     position: relative;
     display: block;
     padding: 0 5px;
@@ -35,13 +35,13 @@
     transition: all 0.3s linear 0s;
   }
 
-  .nav ul li .menu {
+  nav ul li .menu {
     position: absolute;
     background: #FFFFFF;
     overflow: hidden;
   }
 
-  .nav ul li .menu li {
+  nav ul li .menu li {
     display: block;
     width: 100%;
     height: 25px;
@@ -52,7 +52,7 @@
   }
 
 
-  .nav ul li .menu li a {
+  nav ul li .menu li a {
     background: #FFFFFF;
     padding: 0 5px 0 10px;
     color: #666666;
@@ -70,7 +70,7 @@
     display: flex;
   }
 
-  .nav ul li:nth-last-child(2) a:after {
+  nav ul li:nth-last-child(2) a:after {
     position: absolute;
     z-index: 1;
     top: 0;
@@ -82,7 +82,7 @@
   }
 
 
-  .nav ul li a {
+  nav ul li a {
     position: relative;
     display: block;
     padding: 0 2px;
@@ -96,13 +96,13 @@
     transition: all 0.3s linear 0s;
   }
 
-  .nav ul li .menu {
+  nav ul li .menu {
     position: absolute;
     background: #FFFFFF;
     overflow: hidden;
   }
 
-  .nav ul li .menu li {
+  nav ul li .menu li {
     display: block;
     width: 100%;
     height: 10px;
@@ -113,7 +113,7 @@
   }
 
 
-  .nav ul li .menu li a {
+  nav ul li .menu li a {
     background: #FFFFFF;
     padding: 0 5px 0 5px;
     color: #666666;
@@ -124,33 +124,33 @@
 
 }
 
-.nav {
+nav {
   border-radius: 3px;
 }
 
-.nav ul {
+nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.nav ul li {
+nav ul li {
   position: relative;
   display: inline-block;
   vertical-align: middle;
   float: left;
 }
 
-.nav ul li:first-child,
-.nav ul li:nth-child(2),
-.nav ul li:last-child {
+nav ul li:first-child,
+nav ul li:nth-child(2),
+nav ul li:last-child {
   border-left: 0;
 }
 
-.nav ul li:nth-child(2) a:before,
-.nav ul li:nth-last-child(2) a:before,
-.nav ul li:nth-child(2) a:after,
-.nav ul li:nth-last-child(2) a:after {
+nav ul li:nth-child(2) a:before,
+nav ul li:nth-last-child(2) a:before,
+nav ul li:nth-child(2) a:after,
+nav ul li:nth-last-child(2) a:after {
   -webkit-transition: all 0.3s linear 0s;
   -moz-transition: all 0.3s linear 0s;
   -ms-transition: all 0.3s linear 0s;
@@ -158,7 +158,7 @@
   transition: all 0.3s linear 0s;
 }
 
-.nav ul li .menu li a:hover {
+nav ul li .menu li a:hover {
   background: #f2f2f2;
 }
 
@@ -166,19 +166,19 @@
   float: right;
 }
 
-.nav ul li:last-child a:hover {
+nav ul li:last-child a:hover {
   color: white;
   background: #666666;
 }
 
-.nav ul li a:hover {
+nav ul li a:hover {
   background: #f2f2f2;
 }
 
-.nav ul li a.logo:hover {
+nav ul li a.logo:hover {
   background: #ffce54;
 }
 
-.nav ul li a.logo img {
+nav ul li a.logo img {
   width: 100%;
 }
