--- a/client-document-management/src/main/frontend/src/app/styles/menu.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/menu.scss
@@ -35,6 +35,9 @@
     transition: all 0.3s linear 0s;
   }
 
+  nav ul li a:hover {
+    cursor: pointer;
+  }
   nav ul li .menu {
     position: absolute;
     background: #FFFFFF;
@@ -43,8 +46,8 @@
 
   nav ul li .menu li {
     display: block;
-    width: 100%;
-    height: 25px;
+    width: 150px;
+    height: 70px;
     margin: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     z-index: 100;
@@ -53,9 +56,9 @@
 
 
   nav ul li .menu li a {
-    background: #FFFFFF;
-    padding: 0 5px 0 10px;
-    color: #666666;
+    background: rgba(127, 39, 119, 0.5);
+    padding: 25px;
+    color: white;
     line-height: 15px;
     text-align: center;
     z-index: 100;
