--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -129,9 +129,7 @@ form {
 }
 
 .document-item {
-  .text-input-component {
-    padding-left: 50px;
-  }
+  margin: auto;
 }
 
 
@@ -244,4 +242,25 @@ select::-ms-expand {
 
   color: black;
   font-size: 20px;
+}
+
+.type-break {
+  &-div {
+    height: 30px;
+    width: 100%;
+  }
+}
+
+.type-title {
+  display: block;
+}
+
+hr {
+  width: 500px;
+}
+
+.docTitle {
+  font-size: 22px;
+  font-weight: 700;
+  margin: 50px 0;
 }
