--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -8,7 +8,7 @@ body {
   font-size: 12px;
   text-decoration: none;
   color: black !important;
-  background-color: #EDE1F2 !important;
+  background-color: #ebe9ec !important;
   overflow: hidden scroll;
 }
 
