--- a/client-document-management/src/main/frontend/src/app/styles/print.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/print.scss
@@ -51,6 +51,9 @@
   .document-item {
     margin: auto;
   }
+  .document-img {
+    display: initial;
+  }
   .form-control {
     width: 230px;
     display: block;
