--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -288,6 +288,11 @@ hr {
   &-form {
     min-width: 1000px;
     min-height: 500px;
+
+    .document-img {
+      max-height: 100%;
+      width: 100%;
+    }
   }
 }
 
