--- a/client-document-management/src/main/frontend/src/app/styles/custom.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/custom.scss
@@ -288,10 +288,12 @@ hr {
   &-form {
     min-width: 1000px;
     min-height: 500px;
+    padding-top: 0;
 
     .document-img {
       max-height: 100%;
       width: 100%;
+      padding-bottom: 20px;
     }
   }
 }
