--- a/client-document-management/src/main/frontend/src/app/styles/main.scss
+++ b/client-document-management/src/main/frontend/src/app/styles/main.scss
@@ -1,4 +1,6 @@
 @import "~normalize-scss";
+@import "~bootstrap/scss/bootstrap.scss";
+@import "~react-table/react-table.css";
 @import "menu";
 @import "components";
 @import "print";
